<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.RegOneFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/detail_user"
        android:textColor="@color/mainColorMedium"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/desc_reg_one"
        android:textColor="@color/greey"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/full_name"
        android:textColor="@color/mainColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <EditText
        android:id="@+id/usernameET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="name"
        android:drawablePadding="10sp"
        android:background="@drawable/editextstyle"
        android:hint="@string/hint_username"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:nextFocusDown="@id/passwordET"
        android:paddingStart="50dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/greey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/usernameET"
        app:layout_constraintStart_toStartOf="@+id/usernameET"
        app:layout_constraintTop_toTopOf="@+id/usernameET" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/mainColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameET" />


    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/editextstyle"
        android:drawablePadding="10sp"
        android:hint="@string/hint_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/passwordET"
        android:paddingStart="50dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/greey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/icon_email"
        app:layout_constraintBottom_toBottomOf="@+id/emailET"
        app:layout_constraintStart_toStartOf="@+id/emailET"
        app:layout_constraintTop_toTopOf="@+id/emailET" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
</layout>