<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".fragment.RegTwoFragment" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/detail_company"
                android:textColor="@color/mainColorMedium"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/desc_reg_two"
                android:textColor="@color/greey"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_company_two"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox"
                app:layout_constraintStart_toEndOf="@+id/checkBox"
                app:layout_constraintTop_toTopOf="@+id/checkBox" />

            <TextView
                android:id="@+id/textCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/company_name"
                android:textColor="@color/mainColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" />

            <EditText
                android:id="@+id/companyET"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="name"
                android:drawablePadding="10sp"
                android:background="@drawable/editextstyle"
                android:hint="@string/hint_company"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:nextFocusDown="@id/wasteET"
                android:paddingStart="50dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/greey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCompany" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/baseline_castle_24"
                app:layout_constraintBottom_toBottomOf="@+id/companyET"
                app:layout_constraintStart_toStartOf="@+id/companyET"
                app:layout_constraintTop_toTopOf="@+id/companyET" />


            <TextView
                android:id="@+id/textWaste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/waste_production"
                android:textColor="@color/mainColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/companyET" />

            <EditText
                android:id="@+id/wasteET"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="name"
                android:background="@drawable/editextstyle"
                android:drawablePadding="10sp"
                android:hint="@string/hint_waste"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:nextFocusDown="@id/wasteTransportationET"
                android:paddingStart="50dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/greey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textWaste" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/baseline_1k_plus_24"
                app:layout_constraintBottom_toBottomOf="@+id/wasteET"
                app:layout_constraintStart_toStartOf="@+id/wasteET"
                app:layout_constraintTop_toTopOf="@+id/wasteET" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Ton"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/wasteET"
                app:layout_constraintEnd_toEndOf="@+id/wasteET"
                app:layout_constraintTop_toTopOf="@+id/wasteET" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/wasteET"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/wasteET" />

            <TextView
                android:id="@+id/textLocationTransportation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/transportation_location"
                android:textColor="@color/mainColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wasteET" />

            <Button
                android:id="@+id/selectLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_location"
                app:layout_constraintBottom_toBottomOf="@+id/textLocationTransportation"
                app:layout_constraintEnd_toEndOf="@+id/locationTransportationET"
                app:layout_constraintTop_toTopOf="@+id/textLocationTransportation" />

            <EditText
                android:id="@+id/locationTransportationET"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:paddingTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="16dp"
                android:autofillHints="name"
                android:background="@drawable/editextstyle"
                android:drawablePadding="10sp"
                android:hint="@string/hint_location_transportation"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences|textMultiLine"
                android:lineSpacingExtra="5dp"
                android:nextFocusDown="@id/passwordET"
                android:paddingStart="50dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/greey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLocationTransportation" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="17dp"
                android:src="@drawable/baseline_add_location_24"
                app:layout_constraintStart_toStartOf="@+id/companyET"
                app:layout_constraintTop_toTopOf="@+id/locationTransportationET" />

            <TextView
                android:id="@+id/textProvince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/provinsi"
                android:textColor="@color/mainColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationTransportationET" />

            <EditText
                android:id="@+id/provinceET"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="name"
                android:background="@drawable/editextstyle"
                android:drawablePadding="10sp"
                android:hint="@string/hint_provinsi"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:nextFocusDown="@id/wasteTransportationET"
                android:paddingStart="50dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/greey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textProvince" />

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/baseline_assistant_navigation_24"
                app:layout_constraintBottom_toBottomOf="@+id/provinceET"
                app:layout_constraintStart_toStartOf="@+id/companyET"
                app:layout_constraintTop_toTopOf="@+id/provinceET" />

            <TextView
                android:id="@+id/textCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/city"
                android:textColor="@color/mainColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/provinceET" />

            <EditText
                android:id="@+id/cityET"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="name"
                android:background="@drawable/editextstyle"
                android:drawablePadding="10sp"
                android:hint="@string/hint_city"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:nextFocusDown="@id/wasteTransportationET"
                android:paddingStart="50dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/greey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCity" />

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/baseline_add_business_24"
                app:layout_constraintBottom_toBottomOf="@+id/cityET"
                app:layout_constraintStart_toStartOf="@+id/companyET"
                app:layout_constraintTop_toTopOf="@+id/cityET" />

            <TextView
                android:id="@+id/textZipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/zip_code"
                android:textColor="@color/mainColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityET" />

            <EditText
                android:id="@+id/zipCodeET"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:autofillHints="name"
                android:background="@drawable/editextstyle"
                android:drawablePadding="10sp"
                android:hint="@string/hint_zip_code"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:nextFocusDown="@id/wasteTransportationET"
                android:paddingStart="50dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/greey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textZipCode" />

            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/baseline_add_business_24"
                app:layout_constraintBottom_toBottomOf="@+id/zipCodeET"
                app:layout_constraintStart_toStartOf="@+id/companyET"
                app:layout_constraintTop_toTopOf="@+id/zipCodeET" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>