<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageDeposit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:src="@drawable/youngman" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/timeDeposit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/n_a"
            android:textColor="@color/greey"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/statusDeposit"
            app:layout_constraintStart_toEndOf="@+id/cardView4"
            app:layout_constraintTop_toTopOf="@+id/cardView4" />

        <TextView
            android:id="@+id/descriptionDeposit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/lorem"
            android:textColor="@color/mainColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/priceDeposit"
            app:layout_constraintStart_toEndOf="@+id/cardView4"
            app:layout_constraintTop_toBottomOf="@+id/timeDeposit"
            app:layout_constraintVertical_bias="0.35" />

        <TextView
            android:id="@+id/statusDeposit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/n_a"
            android:textColor="@color/mainColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/timeDeposit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/timeDeposit" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/idr"
            android:textColor="@color/mainColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusDeposit" />

        <TextView
            android:id="@+id/priceDeposit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="300.000"
            android:textColor="@color/mainColor"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>